Update project configuration and enhance documentation
- Added .idea/ and .cache/ to .gitignore to exclude IDE-specific files.
- Enabled example compilation in CMake by setting COMPILE_EXAMPLES to ON.
- Updated comments in ClientPublisherApp.cpp and ClientSubscriberApp.hpp to include Chinese translations for better clarity.
- Modified constructor declarations in ClientPublisherApp and ClientSubscriberApp to use 'explicit' and marked destructors as 'override'.
- Cleaned up hot_update.sh script comments for consistency and clarity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -454,7 +454,7 @@ add_subdirectory(test)
 ###############################################################################
 # Examples
 ###############################################################################
-option(COMPILE_EXAMPLES "Build example" OFF)
+option(COMPILE_EXAMPLES "Build example" ON)
 
 if(EPROSIMA_BUILD)
     set(COMPILE_EXAMPLES ON)
