--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,8 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+.idea/
+.cache/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
